Correction --> Contraste

--- a/style.css
+++ b/style.css
@@ -1042,6 +1042,7 @@ h4 {
 }
 
 /***Modification***/
+/*Textes représenté par des images*/
 .image-to-text-1 h2{
     width: 100%;
     max-width: 700px;
@@ -1056,6 +1057,7 @@ h4 {
 }
 
 .image-to-text-2 cite{
+    color: #575757;
     font-style: normal;
 }
 
@@ -1065,7 +1067,7 @@ h4 {
     margin: auto;
 }
 
-/*Smartphone*/
+/*Poids des images*/
 @media screen and (max-width: 500px){
     .bg-banniere {
         background-image: url("img/la-chouette-agence-banniere-mobile.jpg");
@@ -1074,4 +1076,34 @@ h4 {
     .bg-presentation {
         background-image: url("img/image-de-presentation-mobile.jpg");
     }
+}
+
+/*Contraste*/
+.btn-atomic-tangerine {
+    color: #3B3B3B!important;
+}
+
+.btn-atomic-tangerine:hover {
+    color: #3B3B3B!important;
+}
+
+.bg-access{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+a{
+    color: #424242!important;
+}
+
+p{
+    color: black!important;
+    font-size: 1.1em;
+}
+
+.color-access{
+    color: rgba(0, 0, 0)!important;
+}
+
+.social .color-access:hover{
+    color: white!important;
 }
